shelter/pages/pets/style.css
/* ... */
@font-face {
    font-family: 'Georgia';
    src: url('/vikalubenets-JSFE2023Q1/shelter/assets/fonts/georgia/woff2/Georgia.woff2') format('woff2'),
        url('/vikalubenets-JSFE2023Q1/shelter/assets/fonts/georgia/woff/Georgia.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

/* Add fonts end*/

/* General styles start*/

* {
    margin: 0;
    padding: 0;
    border: 0;
}

html {
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    align-items: center;
    scroll-behavior: smooth;
}

body {
    width: 100%;
    overflow-x: hidden;
}

a {
    text-decoration: none;
}

.wrapper {
    margin: 0 auto;
    overflow-x: hidden;
}

/* General styles end*/

/* Header styles start*/

.header{
    height: 120px;
    display: flex;
    align-items: center;
}

.header .wrapper {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-top: 30px;
    padding-bottom: 30px;
}

.cover{
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    background: rgba(0,0,0,0.5);
    display: none;
}

.logo {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    min-width: 184px;
    max-height: 60px;
}

.logo-title {
    font-family: 'Georgia';
    font-style: normal;
    font-weight: 400;
    font-size: 32px;
    line-height: 35px;
    color: #545454;;
    display: inline-block;
    margin-bottom: 10px;
    letter-spacing: 0.05em;
}

.logo-subtitle {
    font-family: 'Arial';
    font-style: normal;
    font-weight: 400;
    font-size: 13px;
    line-height: 15px;
    color: #292929;
    letter-spacing: 0.1em;
}

.nav {
    width: 443x;
    display: flex;
    justify-content: flex-start;
    flex-wrap: wrap;
}

.nav-item {
    display: inline-block;
    margin-right: 35px;
}

.nav-link {
    font-family: 'Arial';
    font-style: normal;
    font-weight: 400;
    font-size: 15px;
    line-height: 24px;
    color: #545454;
    text-decoration: none;
    display: inline-block;
    padding: 2px;
}

.nav-item:last-child {
    margin: 0;
}

.active-link:active{
    color: #FAFAFA;
    border-bottom: 3px solid #F1CDB3;
}

.active-link:hover{
    color: #292929;
    transition: .3s;
}

.default-link {
    color: #545454;
    border-bottom: 3px solid #F1CDB3;
    cursor: none;
}

.burger-menu {
    width: 30px;
    height: 22px;
    border: none;
    background: transparent;
   display: none;
}

.burger-line{
    width: 100%;
    background-color: #000000;
    height: 2px;
    display: block;
    margin-bottom: 10px;
}

.burger-line:last-child{
    margin-bottom: 0px;
}

/* Header styles end*/

/* Pets styles start*/

.pets {
    display: flex;
    justify-content: center;
    background-color: #F6F6F6;
    background-repeat: repeat;
    background-size: 100vw;
    width: 100%;
}

.pets__content {
    margin-bottom: 100px;
    margin-top: 80px;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    gap: 60px;
}

.title {
    font-family: 'Georgia';
    font-style: normal;
    font-weight: 400;
    font-size: 35px;
    line-height: 45px;
    text-align: center;
    letter-spacing: 0.06em;
    color: #545454;
    display: inline-block;
    width: 400px;
}

.cards-container {
    width: 100%;
    display: flex; 
    gap: 30px 40px;
    flex-wrap: wrap;
}

.card {
    width: 270px;
    height: 435px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-direction: column;
    gap: 30px;
    cursor: pointer;
    background: #FAFAFA;
    border-radius: 9px;
}

.card:hover{
    box-shadow: 0px 2px 35px 14px rgba(13, 13, 13, 0.04);
    transition: .3s;
}

.card:hover > .button__learn-more { 
    background: #FDDCC4;
    transition: .5s;
} 

.card:hover:active > .button__learn-more{
    background: #F1CDB3;
    opacity: 0.7;
}

.pets-photo {
    width: 270px;
    height: 270px;
    border-radius: 9px 9px 0px 0px;
}

.pets-title {
    font-family: 'Georgia';
    font-style: normal;
    font-weight: 400;
    font-size: 20px;
    line-height: 23px;
    letter-spacing: 0.06em;
    color: #545454;
    text-align: center;
}

.button__learn-more {
    width: 187px;
    height: 52px;
    font-family: 'Georgia';
    font-style: normal;
    font-weight: 400;
    font-size: 17px;
    line-height: 22px;
    letter-spacing: 0.06em;
    color: #292929;
    background-color: transparent;
    border: 2px solid #F1CDB3;
    border-radius: 100px;
    margin-bottom: 30px;
}


.navigation {
    width: 340px;
    height: 52px;
    display: flex;
    gap: 20px;
    justify-content: center;
}

.nav-icon {
    height: 52px;
    width: 52px;
    border-radius: 100px;
}

.num-page{
    width: 52px;
    height: 52px;
    display: inline-block;
    border-radius: 50%;
    border: none;
    text-align: center;
    line-height: 50px;
    font-size: 20px;
    font-family: 'Georgia';
    font-style: normal;
    font-weight: 400;
    text-align: center;
}

.num-page.num{
    background-color: #F1CDB3;
}

.active {
    cursor: pointer;
    background-color: white;
    border: 2px solid #F1CDB3;;
}

.inactive{
    border: 2px solid #CDCDCD;
    color: #CDCDCD;
}

.active:active {
    background: #F1CDB3;
    opacity: 0.7;
    transition: .1s;
}

.active:hover {
    background: #FDDCC4;
    transition: .2s;
}

/* Pets styles end*/

/* Footer styles start*/
.footer {
    background: url(noise_lines_transparent@2X.png), radial-gradient(110.67% 538.64% at 5.73% 50%, #513D2F 0%, #1A1A1C 100%), #211F20;
    background-repeat: repeat;
    background-size: 100%;
}

.footer__content {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-top: 40px;
    flex-wrap: wrap;
    margin: 0 40px;
}

.footer-block {
    display: flex;
    flex-direction: column;
    gap: 35px;
    width: 300px;
}
/* ... */

